GL/Projet_GL/src/test/deca/context/invalid/params/param_inconnu.deca
// Description:
//    Declaration de parametre
//
// Resultats:
//    Ligne X: Type inconnu.
//    Erreur affichée: Type Toto is not defined in the environmentType
//

class A {
    int f(Toto x) {
        return 0;
    }
}
{
}
